# agent-mcp-cars

./: README.md  main.py  pyproject.toml  read_db.py  requirements.txt
scripts/: query_cars.py  start_mcp_server.py
src/app/: runner.py
src/app/agent/: agent_llm.py  tools.py
src/app/cli/: interface.py
src/app/database/: config.py  seed.py  session.py
src/app/mcp/: client.py  server.py
src/app/models/: car.py
tests/: conftest.py  test_agent.py
