[project]
name = "agent-mcp-cars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-together>=0.3.0",
    "langgraph>=0.4.8",
    "sqlalchemy>=2.0.41",
    "typer>=0.16.0",
]
